# app/Http/Requests/Orders/StoreOrderRequest.php
@@ -2,10 +2,11 @@
 
 namespace App\Http\Requests\Orders;
 
+use App\Enums\Brand;
 use App\Enums\OrderType;
-use App\Enums\ReferralCodeType;
+use App\Enums\ReferenceCodeType;
 use App\Models\Plan;
-use App\Rules\ReferralNonce;
+use App\Rules\ReferenceNonce;
 use Illuminate\Contracts\Validation\ValidationRule;
 use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Validation\Rule;
@@ -19,10 +20,17 @@ class StoreOrderRequest extends FormRequest
      */
     protected function prepareForValidation(): void
     {
-        // Change referral_code to uppercase if provided and not null
-        if ($this->input('referral_code') !== null) {
+        // Change reference_code to uppercase if provided and not null
+        if ($this->input('reference_code') !== null) {
             $this->merge([
-                'referral_code' => strtoupper($this->input('referral_code')),
+                'reference_code' => strtoupper($this->input('reference_code')),
+            ]);
+        }
+
+        // merge brand_id if user has logged in
+        if (auth()->check()) {
+            $this->merge([
+                'brand_id' => auth()->user()->brand_id,
             ]);
         }
     }
@@ -35,24 +43,28 @@ class StoreOrderRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'type' => ['required', Rule::in(OrderType::cases())],
+            'brand_id' => ['required', 'integer', Rule::in(Brand::cases())],
+            'type_id' => ['required', 'integer', Rule::in(OrderType::cases())],
             'item_id' => ['required', 'integer', Rule::exists(Plan::class, 'id')],
-            'referral_code' => [
+            'recipient_first_name' => ['required', 'string', 'max:255'],
+            'recipient_last_name' => ['required', 'string', 'max:255'],
+            'recipient_email' => ['required', 'email', 'max:255'],
+            'reference_code' => [
                 'nullable',
                 'string',
-                'required_with:referral_code_type',
+                'required_with:reference_code_type',
             ],
-            'referral_code_type' => [
+            'reference_code_type_id' => [
                 'nullable',
                 'integer',
-                'required_with:referral_code',
-                Rule::in(ReferralCodeType::cases()),
+                'required_with:reference_code',
+                Rule::in(ReferenceCodeType::cases()),
             ],
-            'referral_nonce' => [
+            'reference_nonce' => [
                 'nullable',
                 'string',
-                Rule::requiredIf(fn () => $this->input('referral_code') === 'ORIG' && $this->input('referral_code_type') === ReferralCodeType::PROMO->value),
-                new ReferralNonce,
+                Rule::requiredIf(fn () => $this->input('reference_code') === 'ORIG' && $this->input('reference_code_type_id') === ReferenceCodeType::PROMO->value),
+                new ReferenceNonce,
             ],
         ];
     }
